use newtonsoft.Json instead of ServiceStack.text

--- a/OVHApi.testapp/OVHApi.testapp.csproj
+++ b/OVHApi.testapp/OVHApi.testapp.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,10 +30,11 @@
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="ServiceStack.Text">
-      <HintPath>..\packages\ServiceStack.Text.3.9.70\lib\net35\ServiceStack.Text.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -44,8 +45,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OVHApi.Parser\OVHApi.Parser.csproj">
+      <Project>{18aad39b-9710-4fb7-aa90-5cacb2317df4}</Project>
+      <Name>OVHApi.Parser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OVHApi\OVHApi.csproj">
-      <Project>{238E8EA0-5ABE-433B-B328-6C05C9B9FD4D}</Project>
+      <Project>{238e8ea0-5abe-433b-b328-6c05c9b9fd4d}</Project>
       <Name>OVHApi</Name>
     </ProjectReference>
   </ItemGroup>
