net40: build succeeded + commented deletionDate
deletionDate: the api definition contains an invalid date format
("deletionDate": "2014-07-06:00:00+01:00")
ugly fix about "complexType"
support newer num values: replace those chars: ' ', '(', ')'

--- a/OVHApi/OVHApi.csproj
+++ b/OVHApi/OVHApi.csproj
@@ -30,6 +30,7 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -64,6 +65,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="OvhApiClient.Async.cs" />
     <None Include="packages.config" />
     <None Include="Templates\Models.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
