.net 4.0 with sync methods: build succeeded
created basic implementation of stuff in System.Net.Http
now test & debug...

--- a/OVHApi/OVHApi.csproj
+++ b/OVHApi/OVHApi.csproj
@@ -16,7 +16,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
+    <DefineConstants>DEBUG;ASYNC</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Credentials.cs" />
+    <Compile Include="Http\JsonContent.cs" />
     <Compile Include="IPAddressBlock.cs" />
     <Compile Include="Tools\Ensure.cs" />
     <Compile Include="Tools\Error.cs" />
