--- a/NET40.OVHApi.Sync/NET40.OVHApi.Sync.csproj
+++ b/NET40.OVHApi.Sync/NET40.OVHApi.Sync.csproj
@@ -4,21 +4,20 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2D514408-2D84-4520-83C3-8B6347E0F021}</ProjectGuid>
+    <ProjectGuid>{E38897F2-0EFD-4E78-84E8-C3EA34AE4EF7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OVHApi</RootNamespace>
-    <AssemblyName>NET40.OVHApi</AssemblyName>
+    <AssemblyName>NET40.OVHApi.Sync</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;ASYNC</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NOASYNC</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -31,33 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Threading.Tasks">
-      <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Threading.Tasks.Extensions">
-      <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Threading.Tasks.Extensions.Desktop">
-      <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.Desktop.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.IO">
-      <HintPath>..\packages\Microsoft.Bcl.1.1.8\lib\net40\System.IO.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net" />
-    <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="System.Runtime">
-      <HintPath>..\packages\Microsoft.Bcl.1.1.8\lib\net40\System.Runtime.dll</HintPath>
-    </Reference>
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Threading.Tasks">
-      <HintPath>..\packages\Microsoft.Bcl.1.1.8\lib\net40\System.Threading.Tasks.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\OVHApi\Credentials.cs">
@@ -69,17 +48,11 @@
     <Compile Include="..\OVHApi\IPAddressBlock.cs">
       <Link>IPAddressBlock.cs</Link>
     </Compile>
-    <Compile Include="..\OVHApi\OvhApiClient.Async.cs">
-      <Link>OvhApiClient.Async.cs</Link>
-    </Compile>
     <Compile Include="..\OVHApi\OvhApiClient.cs">
       <Link>OvhApiClient.cs</Link>
     </Compile>
     <Compile Include="..\OVHApi\Templates\Models.cs">
       <Link>Templates\Models.cs</Link>
-    </Compile>
-    <Compile Include="..\OVHApi\Templates\Operations.cs">
-      <Link>Templates\Operations.cs</Link>
     </Compile>
     <Compile Include="..\OVHApi\Tools\DateTimeExtensions.cs">
       <Link>Tools\DateTimeExtensions.cs</Link>
@@ -99,14 +72,24 @@
     <Compile Include="..\OVHApi\Tools\QueryString.cs">
       <Link>Tools\QueryString.cs</Link>
     </Compile>
-    <None Include="app.config" />
-    <None Include="Templates\Operations.sync.cs">
+    <Compile Include="Http\ByteArrayContent.cs" />
+    <Compile Include="Http\HeadersCollection.cs" />
+    <Compile Include="Http\HttpClient.cs" />
+    <Compile Include="Http\HttpContent.cs" />
+    <Compile Include="Http\HttpMessage.cs" />
+    <Compile Include="Http\HttpResponseMessage.cs" />
+    <Compile Include="Http\StringContent.cs" />
+    <Compile Include="OvhApiClient.Sync.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Templates\Operations.sync.cs">
+      <DependentUpon>Operations.tt</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Operations.tt</DependentUpon>
-    </None>
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    </Compile>
+    <Compile Include="Http\HttpMethod.cs" />
+    <Compile Include="Http\HttpRequestMessage.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Templates\Operations.tt">
@@ -118,9 +101,4 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
-  <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
-    <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
-    <Error Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
-  </Target>
 </Project>
