sync code fixes

--- a/NET40.OVHApi.Sync/NET40.OVHApi.Sync.csproj
+++ b/NET40.OVHApi.Sync/NET40.OVHApi.Sync.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OVHApi</RootNamespace>
-    <AssemblyName>NET40.OVHApi.Sync</AssemblyName>
+    <AssemblyName>OVHApi</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,6 +20,8 @@
     <DefineConstants>TRACE;DEBUG;NOASYNC</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\OVHApi.xml</DocumentationFile>
+    <NoWarn>0649;1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,9 +31,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>temp.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.4.5.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -73,7 +82,6 @@
       <Link>Tools\QueryString.cs</Link>
     </Compile>
     <Compile Include="Http\ByteArrayContent.cs" />
-    <Compile Include="Http\HeadersCollection.cs" />
     <Compile Include="Http\HttpClient.cs" />
     <Compile Include="Http\HttpContent.cs" />
     <Compile Include="Http\HttpMessage.cs" />
@@ -92,6 +100,7 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="temp.snk" />
     <None Include="Templates\Operations.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Operations.sync.cs</LastGenOutput>
