--- a/NET40.OVHApi/NET40.OVHApi.csproj
+++ b/NET40.OVHApi/NET40.OVHApi.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OVHApi</RootNamespace>
-    <AssemblyName>NET40.OVHApi</AssemblyName>
+    <AssemblyName>OVHApi</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
